@@ -2078,7 +2078,7 @@ enum
     STR_CHEAT_LARGE_TRAM_GUESTS = 2765,
     STR_CHEAT_WIN_SCENARIO = 2766,
     STR_CHEAT_FREEZE_WEATHER = 2767,
-    STR_CHEAT_UNFREEZE_WEATHER = 2768,
+
     STR_CHEAT_OPEN_PARK = 2769,
     STR_CHEAT_CLOSE_PARK = 2770,
     // STR_2771    :Slower Gamespeed
@@ -2820,8 +2820,6 @@ enum
     STR_NORMAL = 5366,
     STR_FAST = 5367,
     STR_CHEAT_RESET_CRASH_STATUS = 5368,
-    STR_CHEAT_PARK_PARAMETERS = 5369,
-    STR_CHEAT_PARK_PARAMETERS_TIP = 5370,
     STR_DEBUG_DROPDOWN_OBJECT_SELECTION = 5371,
     STR_INVERT_RIGHT_MOUSE_DRAG = 5372,
     STR_NAME = 5373,
@@ -3140,8 +3138,8 @@ enum
     STR_RAIN = STR_SUNNY + 3,
     STR_HEAVY_RAIN = STR_SUNNY + 4,
     STR_THUNDERSTORM = STR_SUNNY + 5,
-    STR_FORCE_WEATHER = 5725,
-    STR_FORCE_WEATHER_TOOLTIP = 5726,
+    STR_CHANGE_WEATHER = 5725,
+    STR_CHANGE_WEATHER_TOOLTIP = 5726,
     STR_SCALING_QUALITY = 5727,
     STR_SCALING_QUALITY_LINEAR = 5731,
     STR_OPTIONS_RENDERING_TIP = 5734,
@@ -3898,6 +3896,8 @@ enum
     STR_COULD_NOT_FIND_AT_PATH = 6392,
 
     STR_CHEATS_MENU_OBJECTIVE_OPTIONS = 6393,
+    STR_CHEAT_OBJECTIVE_GROUP = 6394,
+    STR_CHEAT_MAINTENANCE_GROUP = 6395,
 
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
